# plugin-rs

./: Cargo.toml  Readme.md  Tutorial.md
src/: clap.rs  lib.rs  parameters.rs  vst3.rs
src/plugin/: midi.rs  mod.rs  osc.rs  synth.rs
src/plugin/example/: mod.rs  plugin_effect.rs  plugin_instrument.rs
src/plugin/generator/: mod.rs  osc.rs
tutorial/: Часть 1.md  Часть 2.md
