[package]
name = "plugin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#Создать библиотеку 
[lib]
crate-type = ["cdylib"] 
#crate-type = ["staticlib"]

#Область видимости
[workspace]
members = ["xtask"]

#Крейты
[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# GUI
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
egui = "0.19.0"

nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
iced = "0.4.2"